# galadriel3css

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  USAGE.md  galadrielStyleflux.d.ts  galadrielStyleflux.js  index.d.ts  index.js  main.d.ts  main.js  package-lock.json  package.json  test.js
.github/workflows/: CI.yml
__test__/: index.spec.mjs
crates/g3css-ast/: Cargo.toml
crates/g3css-common/: Cargo.toml
crates/g3css-lsp/: Cargo.toml
crates/g3css-observer/: Cargo.toml
crates/g3css-parser/: Cargo.toml
crates/g3css-transformer/: Cargo.toml
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  main.rs
src/ast/: stylitron.rs
src/cli/: index.js
src/core/: nucleus.rs  property_core.rs  screen_core.rs  selector_core.rs
src/origins/: createStyles.d.ts  createStyles.js
src/rustal/: alchemist.rs  blueprint.rs  classinator.rs  codelyzer.rs  configatron.rs  dummy_test.rs  file_reader.rs  gatekeeper.rs  (+4 more)
(+30 files in other folders)
