[package]
edition = "2021"
name = "galadriel3css"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
nom = "7.1.3"
serde = "1.0.193"
serde_json = "1.0.108"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
